<resources>
    <string name="app_name">MySavior</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_reminder">Reminder</string>
    <string name="question">Are you okay?</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Login</string>
    <string name="name">Nama</string>
    <string name="date">Tanggal Lahir</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="title_article">Title</string>
    <string name="desc">Description</string>
</resources>